fix breadcrumb overflow

--- a/src/@design/components/Breadcrumbs/Breadcrumbs.scss
+++ b/src/@design/components/Breadcrumbs/Breadcrumbs.scss
@@ -1,11 +1,11 @@
 .breadcrumbs {
-  display: flex;
-  gap: var(--spacing);
-  padding: 0 var(--spacing);
   font-size: 0.9em;
   flex: 1;
   width: 100%;
+
   overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .breadcrumb-link {
@@ -15,6 +15,8 @@
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
+
+  display: inline;
 }
 
 span.breadcrumb-link {
@@ -24,6 +26,9 @@ span.breadcrumb-link {
 }
 
 .breadcrumb-divider {
+  display: inline;
+  padding: 0 calc(var(--spacing) * 0.5);
+
   &:last-child {
     display: none;
   }
